--- a/openmetadata-service/pom.xml
+++ b/openmetadata-service/pom.xml
@@ -16,7 +16,7 @@
     <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     <sonar.tests>${project.basedir}/src/test/java</sonar.tests>
     <org.testcontainers.version>1.20.3</org.testcontainers.version>
-    <awssdk.version>2.29.11</awssdk.version>
+    <awssdk.version>2.29.15</awssdk.version>
     <azure-identity.version>1.14.0</azure-identity.version>
     <azure-kv.version>4.9.0</azure-kv.version>
     <azure-identity-extensions.version>1.0.0</azure-identity-extensions.version>
@@ -37,6 +37,11 @@
         <artifactId>aws-java-sdk-bom</artifactId>
         <version>${awssdk.version}</version>
         <type>pom</type>
+      </dependency>
+      <dependency>
+        <groupId>software.amazon.awssdk</groupId>
+        <artifactId>checksums</artifactId>
+        <version>${awssdk.version}</version>
       </dependency>
       <dependency>
         <groupId>com.google.cloud</groupId>
